# developing-with-LLMs

./: .gitignore  Makefile  README.md  chat-with-speeches.py  compare_ukraine_russia.py  metadata.json  prepare-data.ipynb  pyproject.toml  semantic-RAG.py  speech_similarity.py  sql-RAG-example.md  sql-RAG.py  un_speeches.db
