[project]
name = "un-speeches-v2"
description = "Analysis on United Nations speeches"
authors = [{ name = "Koen van Gilst", email = "koen@koenvangilst.nl" }]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.15.0",
    "openpyxl>=3.1.5",
 "ruff>=0.9.7",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
